# Sloop

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml  sloop_context.txt  test_long_dialogue.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
configs/: default_agents.yaml
evals/core/: eval_bfcl.py  run_inner.sh
exps/: graph_builder_exp.py  graph_exp.py  graph_sampler_exp.py  intent_generator_exp.py  verify_agents.py
pipelines/: run_pipeline.sh
playground/: bfcl_v3.ipynb  chatrenderer.ipynb  grpo_demo.ipynb  looptool.ipynb  openai.ipynb  toolmind.ipynb
playground/agentscope/: react_and_react.py  user_and_react.py
playground/datasets/: APIGenMT-5k.ipynb  HardGen.ipynb  ToolACE.ipynb  ToolMind.ipynb  bfclv3.ipynb  xlam.ipynb
recipes/bfcl/: baseline-4b-instruct.sh  baseline-4b-thinking.sh  baseline-4b.sh  baseline.sh  looptool-8b-sft.sh  looptool-8b-sft2.sh  looptool.sh  looptool_xlam2.sh  run_task.sh
recipes/bfcl/bfclv3/: bfclv3-baseline.sh  bfclv3-looptool.sh  looptool.sh  vllm-baseline.sh  vllm-looptool.sh  vllm.sh
recipes/eval/: qwen3-235b.sh  qwen3-8b-baseline.sh  qwen3-8b-looptool&xlam.sh  qwen3-8b-looptool.sh  qwen3-8b-looptool_xlam2.sh  qwen3-8b-xlam.sh  qwen3-8b-xlam2.sh
recipes/gorilla/bfcl/: baseline.sh  looptool.sh  looptool_xlam2.sh  run_task.sh  xlam2.sh
recipes/serve/: qwen3-8b-baseline.sh  qwen3-8b-looptool.sh  qwen3-8b-looptool_xlam2.sh  qwen3-8b-xlam2.sh
recipes/sft/: global_config.sh  swift_run_task.sh
recipes/sft/swift-qwen3-looptool/: run_recipe.sh  run_task.sh  v2.sh  v3.sh  v4-exp.sh  v5.sh  v6.sh
recipes/sft/swift-qwen3-looptool&xlam2/: run_recipe.sh  run_task.sh  v1.sh  v2.sh
recipes/sft/swift-qwen3-looptool_xlam2/: run_recipe.sh  v3.sh  v4.sh  v5.sh
recipes/sft/swift-qwen3-xlam2/: run_recipe.sh  run_task.sh  v1.sh  v2.sh  v3-tmp.sh
serve/core/: run_vllm_driver.sh  stop_service.sh
sloop/: __init__.py  config.py
sloop/agent/: __init__.py  _assistant_agent.py  _simulator_agent.py  _user_proxy_agent.py
sloop/agents/: __init__.py  assistant.py  assistant_agent.py  selector.py  service.py  simulator_agent.py  user.py  user_proxy_agent.py
sloop/cli/: main.py
sloop/configs/: __init__.py  _env.py
sloop/core/: __init__.py  _graph_builder.py  _graph_sampler.py  _intent_generator.py  graph_builder.py  graph_sampler.py  intent_generator.py
sloop/embedding/: __init__.py  _safe_openai_embedding.py
sloop/engine/: __init__.py  blueprint.py  fsm.py  graph.py  pda.py  rag.py
sloop/exp/: graph_exp.py  graph_sampler_exp.py
sloop/models/: __init__.py  blueprint.py  intent.py  persona.py  schema.py  skeleton.py  state.py  tool.py
sloop/prompts/: generator.py  graph.py  simulation.py
sloop/schemas/: __init__.py  _intent.py  _skeleton.py  _tool.py
sloop/services/: __init__.py  embedding.py  llm.py
sloop/templates/: assistant_decide.j2  assistant_reply.j2  assistant_think.j2  planner.j2  selector.j2  service.j2  tool_call_gen.j2  user.j2
sloop/utils/: __init__.py  _logger.py  graph.py  graph_sampler.py  intent_generator.py  llm.py  logger.py  template.py  tool_graph.py
src/sloop/: __init__.py
src/sloop/agents/: __init__.py  assistant.py  assistant_agent.py  service.py  service_agent.py  user.py  user_agent.py
src/sloop/cli/: __init__.py  main.py
src/sloop/configs/: README.md  agent_prompts.yaml
src/sloop/core/: __init__.py  api_structure.py  architecture_design.py  config.py  conversation_roles.py  coordinator.py  data_generator.py  generation.py  optimization.py  probing.py  prompt_manager.py  user_profiles.py
src/sloop/core/agents/: __init__.py  agent.py  assistant_agent.py  factory.py  planner.py  service_agent.py  user_agent.py  user_profile_agent.py
src/sloop/core/generation/: __init__.py  api_structure.py  sampler.py  service_api.py  sloop.py
src/sloop/core/generation/samplers/: random_sampler.py
src/sloop/core/generation/structures/: list_structure.py
src/sloop/core/prompts/: __init__.py  assistant_agent.py  probing.py  user_agent.py
src/sloop/engine/: __init__.py  blueprint.py  fsm.py  graph.py
src/sloop/models/: schema.py  state.py
src/sloop/templates/: __init__.py  assistant.j2  assistant_reply.j2  assistant_think.j2  planner.j2  service.j2
src/sloop/utils/: __init__.py  template.py
tests/: __init__.py  conftest.py  mock_api.py  services.json  test_agents.py  test_api_structure.py  test_blueprint.py  test_data_generation.py  test_embedding_config.py  test_gen_command.py  test_generate_10_turn_conversation.py  test_graph.py  test_llm_config.py  test_output.json  test_pda.py  test_rag.py  test_selector.py  test_tool_graph.py
tests/data/: data.json  dataset.json  dummy_tools.json  output.json  test_generated_conversation.json
tests/utils/: __init__.py  logger.py
utils/: aggregate_results.py  calc_bfcl_v3_max_tokens.py  convert_apigen_to_swift_standard.py  convert_tools.py  copy_code_to_txt.py  project_packer.py
