[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.12"
name = "sloop"
version = "0.1.1"
dependencies = [
    "fastapi>=0.125.0",
    "openai>=1.55.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "uvicorn>=0.32.0",
    "crewai>=0.70.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "transitions>=0.9.0",
    "litellm>=1.40.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-mock",
    "annotated-doc",
]

[project.scripts]
sloop = "sloop.cli.main:app"

[tool.ruff]
extend-exclude = [
    "playground/",
]

[tool.ruff.lint]
# PL 包含了 Pylint 的所有规则 (Convention, Error, Refactor, Warning)
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM", "PT", "PL"]
ignore = [
    "E501",    # 行太长
    "PLR2004", # 在比较操作中使用了“魔法值 Magic value used in comparison
    "PLW0603", # 使用了 global 语句 uUsing the global statement
    "PLC0415", # 允许在函数/类内部进行 import (Import should be at the top-level of a file)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["E402"]

[tool.ruff.format]
# 启用 'preview' 模式以使用实验性功能
preview = true
# Ruff 默认的换行符是 '\n' (LF)
line-ending = "auto"
# 缩进使用 4 个空格
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["sloop"]

[tool.hatch.build.targets.sdist]
include = [
    "sloop/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require external resources",
]

[dependency-groups]
eval = [
    "bfcl-eval==2025.10.27.1",
    "evalscope>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-mock",
    "annotated-doc",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
