[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.12"
name = "sloop"
dynamic = ["version"]
readme = "README.md" # 建议加上 README
dependencies = [
    "fastapi>=0.125.0",
    "openai>=1.55.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "uvicorn>=0.32.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "transitions>=0.9.0",
    "litellm>=1.40.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "faiss-cpu>=1.11.0",
    "numpy>=1.26.4",
    "agentscope>=1.0.11",
    "scipy>=1.16.3",
    "scikit-learn>=1.8.0",
    "rich>=14.2.0",
]

[tool.hatch.version]
path = "sloop/__init__.py"

[project.optional-dependencies]

[project.scripts]
sloop = "sloop.cli.main:app"

[tool.ruff]
extend-exclude = [
    "playground/",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "SIM", "PT", "PL"]
ignore = [
    "E501",    # 行太长
    "PLR2004", # 魔法值
    "PLW0603", # global
    "PLC0415", # 局部 import
    "PLR0913", # 参数太多 (Too many arguments): AI 项目传参经常很多，这个规则很烦
    "PLR0912", # 分支太多 (Too many branches): 复杂逻辑难免
    "PLR0915", # 语句太多 (Too many statements): 一个函数写太长，有时候是必要的
    "ARG001",  # 未使用的函数参数 (Unused function argument): 配合框架时经常误报
    "ARG002",  # 未使用的实例方法参数
    "SIM108",  # 建议使用三元运算符 (Use ternary operator): 有时候 if-else 更清晰
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["E402"]

[tool.ruff.format]
# 启用 'preview' 模式以使用实验性功能
preview = true
# Ruff 默认的换行符是 '\n' (LF)
line-ending = "auto"
# 缩进使用 4 个空格
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["sloop"]

[tool.hatch.build.targets.sdist]
include = [
    "sloop/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require external resources",
]
# 让 pytest 默认识别当前目录，避免 import 错误
pythonpath = ["."] 
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-mock",
    "annotated-doc",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "python-dotenv>=1.2.1",
]
